--- a/src/app-css/pokemon.css
+++ b/src/app-css/pokemon.css
@@ -36,6 +36,7 @@
 }
 
 .pokemon-card > p {
+    padding-top: 0.8em;
     border-bottom: 1px solid black;
     font-size: 1.5em;
     text-transform: capitalize;
@@ -88,6 +89,10 @@ table {
     padding-top: 0.5em;
 }
 
+tbody > tr > td > p {
+  margin: 1em 0;
+}
+
 .attributes-column-1 {
     float: left;
     width: 50%;
@@ -115,6 +120,7 @@ table {
 }   
 
 .attribute-title {
+    margin: 1em 0;
     float: left;
     clear: both;
     width: 100%;
@@ -136,6 +142,7 @@ table {
     color: black;
     text-transform: capitalize;
     margin-top: 0;
+    margin-bottom: 1em;
 }
 
 .types {
@@ -156,6 +163,7 @@ table {
     margin-top: 0;
     color: white;
     border-radius: 0.5em;
+    margin-bottom: 1em;
 }
 
 .normal {
