--- a/src/app-css/results.css
+++ b/src/app-css/results.css
@@ -101,6 +101,17 @@ ul {
     box-shadow: none;
 }
 
+.pagination {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1024px;
+    display: block;
+    background-color: white;
+    position: relative;
+    justify-content: center;
+    background: gray left top;
+}
+
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .list {
         width: 31.43%;
